git all add profile 100%

--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
             <p style="color: grey;">There are many variations of passages of Lorem Ipsum available,<br> but the majority havefacts-ca suffered alteration.</p>
             <div class="rd-container">
                 <div class="card">
-                    <img src="ribon.png" alt="">
+                    <img src="images/ribon.png" alt="">
                     <h2 class="card-states">54</h2>
                     <p class="card-title">Awards Winnings</p>
                 </div>
                 <div class="card">
-                    <img src="projects.png" alt="">
+                    <img src="images/projects.png" alt="">
                     <h2 class="card-states">1458</h2>
                     <p class="card-title">Project Finished</p>
                 </div>
                 <div class="card">
-                    <img src="customers.png" alt="">
+                    <img src="images/customers.png" alt="">
                     <h2 class="card-states">590</h2>
                     <p class="card-title">Clients Worked</p>
                 </div>
                 <div class="card">
-                    <img src="email.png" alt="">
+                    <img src="images/email.png" alt="">
                     <h2 class="card-states">22578</h2>
                     <p class="card-title">Email Send</p>
                 </div>
@@ -115,7 +115,7 @@
             <p style="color: grey;" class="pp">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </section>
         <div class="sponsers-img-container">
-            <img src="spotify.png" alt=""><img src="amazon.png" alt=""><img src="google.png" alt=""><img src="telerama.png" alt=""><img src="figma.png" alt="">
+            <img src="images/spotify.png" alt=""><img src="images/amazon.png" alt=""><img src="images/google.png" alt=""><img src="images/telerama.png" alt=""><img src="images/figma.png" alt="">
         </div>
 
     </main>
